chore: remove external dependencies and runtime files from git
- Remove TradingAgents library from git tracking (should be cloned during setup)
- Remove eval_results from git tracking (auto-generated at runtime)
- Update .gitignore to exclude both folders
- Keeps repository clean and focused on source code only

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,9 @@ logs/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# External libraries (should be cloned during setup)
+TradingAgents/
+
+# Runtime generated files
+eval_results/
