fix: remove unnecessary md files

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,12 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Get free key from: https://finnhub.io/
 FINNHUB_API_KEY=your_finnhub_api_key_here
 
+# Alpha Vantage API Key - News and financial data provider
+# Get free key from: https://www.alphavantage.co/support/#api-key
+# Free tier: 25 API calls per day
+# IMPORTANT: Required for news data in stock analysis
+ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
+
 # ========================================
 # OPTIONAL: Bot Configuration
 # ========================================
