--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-telegram-bot==20.7
+python-telegram-bot>=21.0
 python-dotenv==1.0.0
-requests==2.31.0
+requests>=2.31.0
 pandas>=2.0.0
 numpy>=1.24.0
 openai>=1.0.0
@@ -12,3 +12,4 @@ seaborn>=0.12.0
 plotly>=5.15.0
 schedule>=1.2.0
 aiohttp>=3.8.0
+markdown>=3.10
